--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "multer": "^1.4.3",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "1.1.1"
   }
 }
