--- a/package.json
+++ b/package.json
@@ -8,11 +8,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "multer": "^1.4.3",
-    "pdf-parse": "1.1.1"
-  }
+  "license": "ISC"
 }
