--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "multer": "^1.4.3",
-    "pdf-parse": "1.1.1"
+    "mighty-pdf-parser": "^1.0.0",
+    "multer": "^1.4.3"
   }
 }
